# Research

SEIR/: s
SEIR/python/: SEIR_DE.ipynb  bass_hopp.py  lmfit_main.py  main.py  main_DE.py  sample.py  spark_main.py
SEIR/python/.ipynb_checkpoints/: SEIR_DE-checkpoint.ipynb
iran_paper/code/: infection.m~  main.m~  sir.m~
iran_paper/code/msir/: infection.m~  main.m  main.m~  sir.m~
iran_paper/code/msir/Result/: ERROR_01.eps  ERROR_02.eps  FIG_01.eps  FIG_02.eps  FIG_03.eps  R_01.eps  R_02.eps
iran_paper/code/msir/gnuplot/: ERROR_01.gp  ERROR_02.gp  FIG_01.gp  FIG_02.gp  R_01.gp  R_02.gp
iran_paper/code/read_data/: read_netcdf.m  scale_netcdf.m
iran_paper/paper/: iran_paper.org  iran_paper.org~
opengl/: CMakeLists.txt  README.txt
opengl/src/: a.out
